--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ dependencies:
     sdk: flutter
   fluro: "^1.5.2"
   email_validator: '^1.0.0'
+  firebase_auth: ^0.14.0+5
+  cloud_firestore: ^0.13.4
+  provider: ^4.0.4
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
