--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,9 @@ dependencies:
   provider: ^4.0.4
   email_validator: ^1.0.4
   toggle_bar_button: ^1.0.0
-
+  camera:
+  image_picker:
+  path_provider:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
