--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,12 @@ dependencies:
   toggle_bar_button: ^1.0.0
   camera:
   image_picker:
-  path_provider:
-  path:
+#  path_provider:
+#  path:
   qr_flutter: ^3.1.0
+  #qrscan: ^0.2.17
+  qr_code_scanner: ^0.0.12
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
