--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_practice
+name: doctors_prescription
 description: A new Flutter application.
 
 # The following defines the version and build number for your application.
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -22,16 +22,18 @@ dependencies:
   fluro: "^1.5.2"
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.13.4
+  firebase_storage: ^3.1.5
   provider: ^4.0.4
   email_validator: ^1.0.4
   toggle_bar_button: ^1.0.0
-  camera:
-  image_picker:
-#  path_provider:
-#  path:
+  camera: ^0.5.7+4
+  path_provider: ^1.6.5
+  path: ^1.6.4
   qr_flutter: ^3.1.0
-  #qrscan: ^0.2.17
   qr_code_scanner: ^0.0.12
+  flare_flutter: ^2.0.1
+  http: ^0.12.0+4
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -53,7 +55,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/animations/
+    - assets/icons/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
