--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,7 @@
 name: doctors_prescription
 description: A new Flutter application.
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+
 version: 1.0.0+1
 
 environment:
@@ -31,7 +22,8 @@ dependencies:
   qr_flutter: ^3.1.0
   qr_code_scanner: ^0.0.12 # NO WEB SUPPORT
   flare_flutter: ^2.0.1
-  http: ^0.12.0+4
+  http: ^0.12.0+4 # REMOVE LATER
+  dio: ^3.0.10
   image: ^2.1.4
   shared_preferences: ^0.5.10
   google_fonts: ^1.1.0 # NO WEB SUPPORT
