--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   image_cropper: ^1.3.1
   hive: ^1.4.4+1
   hive_flutter: ^0.3.1
+  string_similarity: ^1.1.0
+  cached_network_image: ^2.3.3
+
 
 
 
